Add Launcher wrapper class to fix JavaFX executable JAR